<resources>
    <string name="app_name">Agriculture Application</string>
    <string name="add_photo">Resim Ekle</string>
    <string name="type_name">Türü</string>
    <string name="name_name">Adı</string>
    <string name="disease_name">Hastalığı</string>
    <string name="note_name">Not</string>
    <string name="save_name">Kaydet</string>

    <string-array name="planets_array">
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>
</resources>